# CatDB

./: .gitignore  .gitmodules  AutoGen-Financial.py  CMakeLists.txt  CatDB_Demo.ipynb  LICENSE.txt  README.md  build.sh  demo.ipynb  mytest.ipynb  pom.xml  setup.py  tmp_code_836463023f72cb48dea6276c130b961d.py
Baselines/src/: ChatGPT_KDD99.py  ChatGPT_ProductBackorders.py  ChatGPT_TelcoCustomerChurn.py  ChatGPT_Titanic.py  H2O_Classifier_AutoML.py  SKLearn_Classifier_AutoML.py  requirements.txt
Baselines/src/autoML/: H2O_AutoML.py
Baselines/src/util/: InputArgs.py
CatDB/: core.py
Examples/: README.md  pipeline-performance.csv
Examples/AIDE-baseline/Airline/: iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/AIDE-baseline/Bike-Sharing/: iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/AIDE-baseline/CMC/: iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/AIDE-baseline/House-Sales/: iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/AIDE-baseline/NYC/: iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/AIDE-baseline/Tic-Tac-Toe/: iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/CatDB/Accidents/: CatDB.prompt  iteration-1-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/CatDB/Airline/: CatDB.prompt  iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-5-RUN.py
Examples/CatDB/Bike-Sharing/: CatDB.prompt  iteration-1-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py
Examples/CatDB/CMC/: CatDB.prompt  iteration-2-RUN.py  iteration-4-RUN.py
Examples/CatDB/Financial/: CatDB.prompt  iteration-1-RUN.py  iteration-2-RUN.py  iteration-3-RUN.py  iteration-4-RUN.py  iteration-5-RUN.py
Examples/CatDB/House-Sales/: CatDB.prompt  teration-1-RUN.py  teration-2-RUN.py  teration-3-RUN.py
Examples/CatDB/IMDB-IJS/: CatDB.prompt  iteration-2-RUN.py  iteration-3-RUN.py  iteration-5-RUN.py
Experiments/: .~lock.LLM_Pipe_Error.dat#  CatDB.ipynb  README.md  _run5LocalExperiments.sh  aa.txt  load-spark-java11.sh  nohup.out  ooo.txt  plot.ipynb  plots.ipynb  run1SetupDependencies.sh  run2SetupBaseLines.sh  run3DownloadData.sh  run4PrepareData.sh  run5LocalExperiments.sh  run6PlotResults.sh  runAll.sh  syn-list.txt
Experiments/_all_results/: 1_runExperiment1.dat.acu  3_runExperiment1.dat.acu
Experiments/all_results/: 1_runExperiment1.dat.acu  2_runExperiment1.dat.acu  3_runExperiment1.dat.acu  4_runExperiment1.dat.acu  runExperiment1.dat.acu
Experiments/baselines/: CAAFE.ipynb  CAFE.ipynb  CatDB-TabPFN-balance-scale.ipynb  CatDB-TabPFN-tic-tac-toe.ipynb  diabetes_kaggle.py  main.py  mainAutoGen.py  mainAutoSklearn.py  mainAutogluon.py  mainFlaml.py  mainH2O.py  mttest-Okcupid-Stem.py  mttest.py  requirements.txt  test_holoclean_og.py
Experiments/catalog/: SQL-Script.sql
Experiments/data/: DownloadOpenMLDatasets.py  DownloadOpenMLDatasetsByDatasetID.py  DownloadOpenMLDatasetsByTaskID.py  README.md  RefineOpenMLDatasets.py  RefineOpenMLDatasets2.py  catdb_openml.yaml  dataset_list.csv  kglids_main.py  requirements.txt  script_list.sh
Experiments/explocal/: exp1_catalog.sh  exp2_micro_benchmark.sh  generateAutoMLConfig.py  runMergeResults.sh
Experiments/plotting/: Makefile  _exp3_micorbenchmark.tex  datasets.tex  datasets_overview.tex  exp-demo.tex  exp-slide.tex  exp0.tex  exp0_dataset.tex  exp0_statistics.tex  exp1.tex  exp1_benchmark_it_1.tex  exp1_catalog.tex  exp1_cleaning.tex  exp1_micorbenchmark.tex  exp1_micorbenchmark2.aux  exp1_micorbenchmark2.tex  exp1_microbenchmark-iteration.tex  exp1_systematic.tex  exp2.tex  exp2_micorbenchmark.tex  exp3.tex  exp3_EtoE.tex  exp3_micorbenchmark.tex  exp4.tex  exp5.tex  exp_EtoE.tex  exp_cost_benchmark_it_1.tex  exp_exe_benchmark_it_1.tex  exp_incremental.tex  exp_statistics1.tex  exp_statistics10.tex  exp_statistics11.tex  exp_statistics12.tex  exp_statistics13.tex  exp_statistics14.tex  exp_statistics2.tex  exp_statistics3.tex  exp_statistics4.tex  exp_statistics5.tex  exp_statistics6.tex  (+6 more)
Experiments/results/: runExperiment1.dat.acu
benchmarks/: Autosklearn_2.ipynb  H2O_AutoML.ipynb  health_insurance.ipynb  health_insurance_H2O.ipynb  health_insurance_auoml.ipynb  plots.ipynb  plots_all.ipynb  test2.ipynb  titanic.ipynb  titanic_H2O.ipynb  titanic_automl.ipynb  titanic_orig.ipynb  waste_recycling.ipynb
benchmarks/Titanic/: titanic_automl_sklearn.ipynb
dataprofiling/: __init__.py  config.py  fine_grained_category_detector.py  fine_grained_type_detector.py  kglidsplus_main.py  runAll.sh  runKGLiDS.sh
dataprofiling/fasttext_embeddings/: __init__.py
dataprofiling/model/: column_data_type.py  column_profile.py
dataprofiling/profile_creators/: date_profile_creator.py  float_profile_creator.py  int_profile_creator.py  named_entity_profile_creator.py  natural_language_text_profile_creator.py  profile_creator.py  string_profile_creator.py
dataprofiling/raw_catalog/: Catalog.py  Profile.py
demo/: CatDB_Demo.ipynb  demo.py  setup.sh
demo/CatDB/: __init__.py  core.py  utils.py
old/: pom.xml
old/Experiments/: load-had3.3-java11.sh  run2SetupBaseLines.sh  runAll.sh
old/src/main/cpp/: CMakeLists.txt
python/: Catalog.py  DBDriver.py  DatasetReader.py  OpenAIAPITest.py
src/: requirements.txt
src/runtime/util/data/: AllocationDescriptorHost.h  CMakeLists.txt  DataObjectFactory.h  DataPlacement.cpp  DataPlacement.h  DenseMatrix.cpp  DenseMatrix.h  Frame.cpp  Frame.h  IAllocationDescriptor.h  Matrix.cpp  Matrix.h  MetaDataObject.cpp  MetaDataObject.h  Range.h  Structure.h  ValueTypeCode.h  ValueTypeUtils.cpp  ValueTypeUtils.h
src/test/: CAFETest.py  CAFE_demo_release.ipynb  CMakeLists.txt  DownloadDatasets.py  TestCatalog.py  TestPrompt.py  myTest.py  openAITest.py  run_tests.cpp  run_tests.h  test_TEXT_Prompt.txt
(+4039 files in other folders)
