
add_library(Data
            Frame.cpp
            Frame.h
            Matrix.cpp
            Matrix.h
            Structure.h
            ValueTypeCode.h
            ValueTypeUtils.cpp
            ValueTypeUtils.h
            DataObjectFactory.h
            DataPlacement.cpp
            DataPlacement.h
            MetaDataObject.cpp
            MetaDataObject.h)